# NYC-TAXI

./: Makefile  README.md  app.py  data_models.py  dvc.yaml  params.yaml  pyproject.toml  requirements.txt  requirements_final.txt  setup.py
docs/: mkdocs.yml
docs/docs/: index.md
mlruns/0/: meta.yaml
mlruns/0/096f96c8fcb24a9c9a1e8bfa9c27c972/: meta.yaml
mlruns/0/096f96c8fcb24a9c9a1e8bfa9c27c972/params/: data_path
mlruns/0/096f96c8fcb24a9c9a1e8bfa9c27c972/tags/: mlflow.log-model.history  mlflow.runName
mlruns/0/1646cbe6dd0643be996d7233532646d1/: meta.yaml
mlruns/0/1646cbe6dd0643be996d7233532646d1/artifacts/: rf.joblib
mlruns/0/1646cbe6dd0643be996d7233532646d1/tags/: mlflow.log-model.history  mlflow.runName
mlruns/0/3325b4c32f7f4048927b07338bdb9ce0/: meta.yaml
mlruns/0/3325b4c32f7f4048927b07338bdb9ce0/metrics/: r2_score
mlruns/0/3325b4c32f7f4048927b07338bdb9ce0/tags/: mlflow.log-model.history  mlflow.runName
mlruns/0/5bced69ce85746548987f459f8182025/: meta.yaml
mlruns/0/5bced69ce85746548987f459f8182025/metrics/: r2_score
mlruns/0/7797e4f0a6724c78b0aae86ac9aaa7d9/: meta.yaml
mlruns/0/923014929b444058a9942bdde814a8f9/: meta.yaml
mlruns/0/a2327ff4d5044773b4d3d9189aa1ce7e/: meta.yaml
mlruns/0/d3120e1db69a4e04bb8ac0da5597585d/: meta.yaml
mlruns/0/dec9e0f2279243539d9e6d0c3e7d93a4/: meta.yaml
src/: logger.py
src/data/: extract_dataset.py  make_dataset.py
src/features/: build_features.py  data_preprocessing.py  distances.py  modify_features.py  outliers_removal.py
src/models/: predict_model.py  train_model.py
(+43 files in other folders)
